fix some spacings & update BM v3 readme

--- a/src/theme/_bgcolor-blocks-layout.scss
+++ b/src/theme/_bgcolor-blocks-layout.scss
@@ -1,6 +1,6 @@
 .block {
   &.previous--has--different--backgroundColor {
-    padding-top: $color-block-change-vertical-spacing;
+    padding-top: calc($color-block-change-vertical-spacing + 20px);
     @container (max-width: #{$largest-mobile-screen}) {
       padding-top: 60px !important;
     }
